# Pipeline-API-Agno

./: README.md  db.json  exemplo03.py  exemplo05.py  exemplo06.py  exemplo07.py  pyproject.toml
agents/: main.py  main02.py  main03.py
dashboard/: exemplo01.py
pipeline/: exemplo04.py
